Fix navbar z-index

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,6 +29,8 @@
 $section-padding: 2.5rem 0;
 
 #navbar {
+  z-index: 100;
+
   .top-bar {
     padding: 0;
   }
